--- a/InkConsole/InkConsole.csproj
+++ b/InkConsole/InkConsole.csproj
@@ -1,8 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net472</TargetFramework>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.7.1.189" />
+    <PackageReference Include="SadConsole" Version="8.99.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ink\compiler\ink_compiler.csproj" />
+    <ProjectReference Include="..\ink\ink-engine-runtime\ink-engine-runtime.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Scripts\main.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
