replaced leftover .ink file with a placeholder file

--- a/InkConsole/InkConsole.csproj
+++ b/InkConsole/InkConsole.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Scripts\main.json">
+    <None Update="Scripts\main.ink">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
